[build-system]
requires = [
    "setuptools>=46.4.0",
    "wheel",
    "Cython>=0.29.21,<3.0",
    'oldest-supported-numpy',
]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = [
    "dimod/",
    ]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "RuntimeError",
    "pass",
]

[tool.cibuildwheel]
build-verbosity = "1"

# NumPy (as of 1.25.0) only builds musllinux for 3.9+ and x86_64
skip = "pp* cp38-musllinux_x86_64 *-musllinux_aarch64"

before-test = "pip install -r {project}/tests/requirements.txt"
test-command = "python -m unittest discover {project}/tests/"

[tool.cibuildwheel.linux]
archs = "x86_64 aarch64"
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
musllinux-x86_64-image = "musllinux_1_1"

[tool.cibuildwheel.macos]
# We follow NumPy and don't build universal wheels, see https://github.com/numpy/numpy/pull/20787
archs = "x86_64 arm64"

[tool.cibuildwheel.windows]
archs = "AMD64"
