[build-system]
requires = [
    "setuptools>=46.4.0",
    "wheel",
    "Cython~=3.0",
]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = [
    "dimod/",
    ]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "RuntimeError",
    "pass",
]

[tool.cibuildwheel]
build-verbosity = "1"
skip = "pp* *musllinux*"
before-test = "pip install -r {project}/tests/requirements.txt"
test-command = "python -m unittest discover {project}/tests/"

[tool.cibuildwheel.linux]
archs = "x86_64 aarch64"
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

[tool.cibuildwheel.macos]
# We follow NumPy and don't build universal wheels, see https://github.com/numpy/numpy/pull/20787
archs = "x86_64 arm64"

[tool.cibuildwheel.windows]
archs = "AMD64"
