[metadata]
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = Apache 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/dwavesystems/dimod
download_url = https://github.com/dwavesystems/dimod/releases
version = attr: dimod.__version__

# keep description, author and author email up to date with dimod.package_info
author = D-Wave Systems Inc.
author_email = tools@dwavesys.com
description = A shared API for binary quadratic model samplers.

[options]
include_package_data = True
packages = 
    dimod
    dimod.binary
    dimod.binary.cybqm
    dimod.bqm
    dimod.core
    dimod.discrete
    dimod.generators
    dimod.higherorder
    dimod.quadratic
    dimod.quadratic.cyqm
    dimod.reference
    dimod.reference.composites
    dimod.reference.samplers
    dimod.roof_duality
    dimod.serialization
    dimod.testing
    dimod.views
python_requires = >=3.6, <=3.10
zip_safe = False
install_requires== numpy>=1.17.3,<2.0.0  # keep synced with circle-ci, pyproject.toml
setup_requires ==
    numpy=>1.19.4, <2.0.0
    Cython>=0.29.21, <3.0
    reno==3.3.0
    setuptools>=46.4.0
    wheel
    pip
    
[pycodestyle]
max-line-length = 100

[install] 
optimize=2
