[metadata]
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: C++
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
license = Apache 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/dwavesystems/dimod
download_url = https://github.com/dwavesystems/dimod/releases
version = attr: dimod.__version__

# keep description, author and author email up to date with dimod.package_info
author = D-Wave Systems Inc.
author_email = tools@dwavesys.com
description = A shared API for binary quadratic model samplers.

[options]
include_package_data = True
packages = 
    dimod
    dimod.binary
    dimod.binary.cybqm
    dimod.constrained
    dimod.core
    dimod.discrete
    dimod.generators
    dimod.higherorder
    dimod.quadratic
    dimod.quadratic.cyqm
    dimod.reference
    dimod.reference.composites
    dimod.reference.samplers
    dimod.roof_duality
    dimod.serialization
    dimod.testing
    dimod.views
python_requires = >=3.7
zip_safe = False

[pycodestyle]
max-line-length = 100
